--- a/Meet the Crew.html
+++ b/Meet the Crew.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Meet the Crew</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="MicrosoftTeams-image.png">
+    <link rel="icon" href="MicrosoftTeams-image3.png">
 </head>
 <body>
     <div class="WebTop">
         <h1 class="Bakery-Name">Panaderia Vista Hermosa</h1>
-        <img class="Company-Logo" src="MicrosoftTeams-image.png" alt="A Logo for Panaderia Vista Hermosa">
+        <img class="Company-Logo" src="MicrosoftTeams-image3.png" alt="A Logo for Panaderia Vista Hermosa">
         <!--Replace the Stock Image with an actual logo-->
     </div>
     <nav>
@@ -35,7 +35,7 @@
     <div class="cardsmtc">
         <div class="cardmtc">
             <div class="photo">
-                <img class="human" src="Uncle.jpg" alt="Image of the Uncle">
+                <img class="human" src="Uncle.png" alt="Image of the Uncle">
             </div>
             <div class="info">
                 <div class="titles">
@@ -68,7 +68,7 @@
         </div>
         <div class="cardmtc">
             <div class="photo">
-                <img class="human" src="Aunt.jpg" alt="Image of the Aunt">
+                <img class="human" src="Aunt.png" alt="Image of the Aunt">
             </div>
             <div class="info">
                 <div class="titles">
