--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
 
   <div class="bakery-info">
     <h2>What is Panaderia Vista Hermosa?</h2>
-    Opened on... No info yet.
+    Panaderia Vista Hermosa is a family run bakery running in Fresno, California.
   </div>
   <div class="bakery-content">
     <img class="bakery-goods1" src="MicrosoftTeams-image.png" alt="Panaderia Vista Hermosa Baked Goods">
