--- a/Home.html
+++ b/Home.html
@@ -8,8 +8,11 @@
 </head>
 <body>
   <div class="WebTop">
-    <h1 class="Bakery-Name">Panaderia Vista Hermosa</h1>
-    <img class="Company-Logo" src="MicrosoftTeams-image3.png" alt="A Logo for Panaderia Vista Hermosa">
+      <img class="Company-Logo" src="MicrosoftTeams-image3.png" alt="A Logo for Panaderia Vista Hermosa">
+      <h1 class="Bakery-Name">Panaderia Vista Hermosa</h1>
+    <div class="Address">
+      1333 Kern Street, Fresno, CA 93706
+    </div>
   </div>
     <nav>
       <ul>
@@ -28,6 +31,14 @@
         <li><a href="contactus.html">Contact Us!</a></li>
       </ul>
   </nav>
+  <div class="bakery-info">
+    <h2>What is Panaderia Vista Hermosa?</h2>
+    Panaderia Vista Hermosa is a family run bakery running in Fresno, California.
+  </div>
+  <div class="bakery-content">
+    <img class="bakery-goods1" src="MicrosoftTeams-image.png" alt="Panaderia Vista Hermosa Baked Goods">
+    <img class="bakery-goods2" src="MicrosoftTeams-image2.png" alt="More Panaderia Vista Hermosa Baked Goods">
+  </div>
   <div class="bakery-exterior">
     <img class="bakery-exterior-picture" src="Panaderia.PNG" alt="Panaderia Vista Hermosa Exterior Picture Snip from Google Map's Street View">
     <div class="ratings">
@@ -36,16 +47,8 @@
     </div>
   </div>
 
-  <div class="bakery-info">
-    <h2>What is Panaderia Vista Hermosa?</h2>
-    Opened on... No info yet.
-  </div>
-  <div class="bakery-content">
-    <img class="bakery-goods1" src="MicrosoftTeams-image.png" alt="Panaderia Vista Hermosa Baked Goods">
-    <img class="bakery-goods2" src="MicrosoftTeams-image2.png" alt="More Panaderia Vista Hermosa Baked Goods">
-  </div>
-  <div class="map-information">
-    1333 Kern Street, Fresno, CA 93706
-  </div>
+
+
+
 </body>
 </html>
