--- a/Home.html
+++ b/Home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-  <link rel="icon" href="MicrosoftTeams-image3.png">
+    <link rel="icon" href="MicrosoftTeams-image3.png">
 </head>
 <body>
   <div class="WebTop">
@@ -19,7 +19,7 @@
         <li><a class="active" href="Home.html">Home</a></li>
         <li><a href="bakedgoods.html">Baked Goods</a></li>
         <li>
-          <a href="#">Seasonal Treats</a>
+          <a href="seasonaltreats.html">Seasonal Treats</a>
             <div class="dropdown-content">
               <ul>
                 <li><a href="pandemuerto.html">Pan de Muerto</a></li>
