--- a/pandemuerto.html
+++ b/pandemuerto.html
@@ -17,7 +17,7 @@
         <li><a href="Home.html">Home</a></li>
         <li><a href="bakedgoods.html">Baked Goods</a></li>
         <li>
-            <a href="">Seasonal Treats</a>
+            <a href="seasonaltreats.html">Seasonal Treats</a>
             <div class="dropdown-content">
                 <ul>
                     <li><a class="active" href="pandemuerto.html">Pan de Muerto</a></li>
