--- a/bakedgoods.html
+++ b/bakedgoods.html
@@ -16,7 +16,7 @@
             <li><a href="Home.html">Home</a></li>
             <li><a class="active" href="bakedgoods.html">Baked Goods</a></li>
             <li>
-                <a href="#">Seasonal Treats</a>
+                <a href="seasonaltreats.html">Seasonal Treats</a>
                 <div class="dropdown-content">
                     <ul>
                         <li><a href="pandemuerto.html">Pan de Muerto</a></li>
