--- a/bakedgoods.html
+++ b/bakedgoods.html
@@ -10,6 +10,9 @@
 <div class="WebTop">
     <h1 class="Bakery-Name">Panaderia Vista Hermosa</h1>
     <img class="Company-Logo" src="MicrosoftTeams-image3.png" alt="A Logo for Panaderia Vista Hermosa">
+    <div class="Address">
+        1333 Kern Street, Fresno, CA 93706
+    </div>
 </div>
     <nav>
         <ul>
