--- a/roscadereyes.html
+++ b/roscadereyes.html
@@ -10,7 +10,9 @@
 <div class="WebTop">
     <h1 class="Bakery-Name">Panaderia Vista Hermosa</h1>
     <img class="Company-Logo" src="MicrosoftTeams-image3.png" alt="A Logo for Panaderia Vista Hermosa">
-    <!--Replace the Stock Image with an actual logo-->
+    <div class="Address">
+        1333 Kern Street, Fresno, CA 93706
+    </div>
 </div>
 <nav>
     <ul>
