--- a/Meet the Crew.html
+++ b/Meet the Crew.html
@@ -27,7 +27,7 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="Meet%20the%20Crew.html">Meet the Crew</a></li>
+            <li><a class="active" href="Meet%20the%20Crew.html">Meet the Crew</a></li>
             <li><a href="contactus.html">Contact Us!</a></li>
         </ul>
     </nav>
