--- a/seasonaltreats.html
+++ b/seasonaltreats.html
@@ -31,12 +31,15 @@
         <li><a href="contactus.html">Contact Us!</a></li>
     </ul>
 </nav>
-<h1 class="Treats">Seasonal Treats</h1>
-  <div>
-    <ul>
-      <li><a href="pandemuerto.html">Pan de Muerto</a></li>
-      <li><a href="roscadereyes.html">Rosca</a></li>
-    </ul>
+<div class="Treats">
+  <h1>Seasonal Treats</h1>
+    <div class="card-areatreat">
+        <ul class="TreatsList">
+          <li><a href="pandemuerto.html">Pan de Muerto</a></li>
+          <li><a href="roscadereyes.html">Rosca</a></li>
+        </ul>
+      </div>
+    </div>
   </div>
 </body>
 </html>
