--- a/Meet the Crew.html
+++ b/Meet the Crew.html
@@ -42,8 +42,8 @@
             </div>
             <div class="info">
                 <div class="titles">
-                    <h2>Co-Owner</h2>
-                    <h1>Alex Cervantes</h1>
+                    <h2 class="Workers">Co-Owner</h2>
+                    <h1 class="Workers">Alex Cervantes</h1>
                 </div>
                 <div class="details">
                     <p class="">Alex is the son of owner Josefina. He is currently considered the co-owner of the bakery. Alex has been working for the bakery for 20 years.
@@ -59,8 +59,8 @@
             </div>
             <div class="info">
                 <div class="titles">
-                    <h2>Worker</h2>
-                    <h1>Marco Antonio Pérez</h1>
+                    <h2 class="Workers">Worker</h2>
+                    <h1 class="Workers">Marco Antonio Pérez</h1>
                 </div>
                 <div class="details">
                     <p>Marco has been working as a baker for Panaderia Vista Hermosa for 10 Years. He is a long term employee that has sticked with the bakery
@@ -75,8 +75,8 @@
             </div>
             <div class="info">
                 <div class="titles">
-                    <h2>Worker</h2>
-                    <h1>Yesenia Cervantes</h1>
+                    <h2 class="Workers">Worker</h2>
+                    <h1 class="Workers">Yesenia Cervantes</h1>
                 </div>
                 <div class="details">
                     <p>Yesenia has been working as cashier for Panaderia Vista Hermosa for a few Years. She also helps around the bakery and helps restock some of the
