--- a/seasonaltreats.html
+++ b/seasonaltreats.html
@@ -33,13 +33,12 @@
 </nav>
 <div class="Treats">
   <h1>Seasonal Treats</h1>
-    <div class="card-areatreat">
+    <div class="card-area-treat">
         <ul class="TreatsList">
-          <li><a href="pandemuerto.html">Pan de Muerto</a></li>
-          <li><a href="roscadereyes.html">Rosca</a></li>
+          <li><a class="link" href="pandemuerto.html">Pan de Muerto</a></li>
+          <li><a class="link" href="roscadereyes.html">Rosca</a></li>
         </ul>
       </div>
     </div>
-  </div>
 </body>
 </html>
